<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="70dp"
        android:text="Anymals!"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="@null" />


    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:textColorHint="#A8A8A8"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/password"
        android:textColorHint="#A8A8A8"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_gravity="top"
            android:backgroundTint="#4CAF50"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/find_password_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_gravity="top"
            android:backgroundTint="#4CAF50"
            android:text="@string/find_password"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>