<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <Button
            android:id="@+id/check_duplicate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_duplicate"
            android:textSize="12sp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="비밀번호 (6자 이상)"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/register_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="비밀번호 확인"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/register_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF" />

</LinearLayout>